--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -11,5 +11,5 @@ services:
     volumes:
       - ~/jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - $(which docker):/usr/bin/docker
+      - /usr/bin/docker:/usr/bin/docker
       - /usr/local/bin/docker:/usr/local/bin/docker
