HiveMQ MQTT docker compose changes

--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     restart: unless-stopped
     ports:
       - 1883:1883   # MQTT port
-      - 8080:8080   # Web UI (if applicable)
+      - "8080:8080"   # Web UI (if applicable)
       - "8883:8883"   # Secure MQTT (SSL/TLS)
       - "8443:8443"   # WebSocket Secure
     volumes:
